# finetuning_toolkit

./: README.md  classification_training_data.jsonl  config.yml  openai_classification_finetuner.py  openai_finetuner.py  pyproject.toml
data/: classification_training_data.jsonl
