[tool.poetry]
name = "finetuning-toolkit"
version = "0.1.0"
description = "a toolkit for finetuning LLM to handle classification tasks"
authors = ["Jason Zhang <jszhang0001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.0"
openai = "^1.79.0"
google-genai = "^1.15.0"
pydantic =  "^2.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"